# wifi_waterer

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  WifAterer.ino  pyrightconfig.json  waterer_backend.service  waterer_frontend.service
backend/: .gitignore  setup.cfg  setup.py  vulture_whitelist.py
embedded/: .gitignore  CMakeLists.txt  README.md  embedded.ino
embedded/src/: Application.cpp  Application.h  CMakeLists.txt  IUpdateable.h  Types.cpp  Updateable.cpp  Updateable.h
embedded/src/hardware/: AnalogueInput.cpp  AnalogueInput.h  DigitalOutput.cpp  DigitalOutput.h  DisplayKeyPins.h  LCDPins.h  LiquidCrystalDisplay.cpp  LiquidCrystalDisplay.h  PushSwitch.h  RealTimeClock.cpp  RealTimeClock.h  SmartPump.cpp  SmartPump.h  SmartPumpPins.h  SoftkeyDisplayPins.h
embedded/src/model/: FBRunner.cpp  FBRunner.h  FBSettings.cpp  FBSettings.h  WifiUtils.cpp
embedded/src/model/interfaces/: IRealTimeClock.h  ISmartPump.h
embedded/src/model/mocks/: MockSmartPump.h
embedded/src/presenter/: Presenter.cpp  Presenter.h  PresenterFactory.h
embedded/src/view/: ConnectInfo.h  CurrentTimeTab.h  Display.cpp  Display.h  DisplayKeys.cpp  DisplayKeys.h  DisplayKeysFactory.h  FBDurationTab.h  FBHourTab.cpp  FBHourTab.h  FBHumidityTab.cpp  FBHumidityTab.h  Helpers.cpp  Helpers.h  HomeTab.cpp  HomeTab.h  Key.cpp  Key.h  KeyFactory.h  ManualPumpTab.cpp  ManualPumpTab.h  SaveTab.cpp  SaveTab.h  SoftkeyDisplay.cpp  SoftkeyDisplay.h  TabBase.cpp  TabBase.h  WifiClientHandler.cpp  WifiClientHandler.h  WifiServer.cpp  WifiServer.h  WifiTab.cpp  WifiTab.h
embedded/src/view/interfaces/: ILiquidCrystal.h  IPushSwitch.h  ITabView.h
embedded/src/view/mocks/: MockLiquidCrystal.h  MockPushSwitch.h  MockTabView.h
embedded/tests/: CMakeLists.txt
embedded/tests/model/: feedback_runner_test.cpp
embedded/tests/view/: current_time_tab_test.cpp  display_test.cpp  formatting_test.cpp  key_test.cpp
frontend/: .editorconfig  angular.json  bs-config.json  karma.conf.js  make_templates.py  package.json  (+1 more)
src/: Application.cpp  Application.h  CMakeLists.txt  Display.cc  Display.h  ILiquidCrystal.h  Types.cpp  Types.h  Updateable.cpp
src/hardware/: AnalogueInput.cpp  DigitalOutput.cpp  DigitalOutput.h  LiquidCrystalDisplay.cpp  LiquidCrystalDisplay.h  PushSwitch.cpp  PushSwitch.h  RealTimeClock.cpp  RealTimeClock.h  SLCDPins.h  SmartPump.cpp  SmartPump.h
src/model/: FBSettings.cc  FBSettings.cpp  FBSettings.h  WiFiUtils.h  WifiUtils.cpp  WifiUtils.h
src/model/interfaces/: IRealTimeClock.h  ISmartPump.h
src/model/mocks/: MockRealTimeClock.h
src/presenter/: Presenter.cc  Presenter.cpp  Presenter.h  PresenterFactory.h
src/view/: Application.cpp  Application.h  CurrentTimeTab.cc  CurrentTimeTab.cpp  CurrentTimeTab.h  Display.cc  Display.cpp  Display.h  DisplayFactory.h  DisplayKeys.cpp  DisplayKeys.h  DisplayKeysFactory.h  FBDurationTab.cpp  FBDurationTab.h  FBHourTab.cc  FBHourTab.cpp  FBHourTab.h  FBHumidityTab.cc  FBHumidityTab.cpp  FBHumidityTab.h  Helpers.cpp  Helpers.h  HomeTab.cpp  HomeTab.h  Key.cc  Key.cpp  Key.h  Keys.cc  Keys.cpp  Keys.h  ManualPumpTab.cpp  ManualPumpTab.h  SaveTab.cpp  SaveTab.h  SoftkeyDisplay.cpp  SoftkeyDisplay.h  TabBase.cc  TabBase.cpp  TabBase.h  Tabs.cpp  (+4 more)
src/view/interfaces/: ILiquidCrystal.h  IPushSwitch.h  ITabView.h
src/view/mocks/: MockLiquidCrystal.h  MockPushSwitch.h  MockTabView.h
(+87 files in other folders)
